--- a/mo-2/index.html
+++ b/mo-2/index.html
@@ -1,2 +1,10 @@
 # first
 Module 2 of coursera course
+<!doctype html>
+<html>
+<head>
+ </head>
+ <body>
+   <p>alohaaaa people</p>
+  </body>
+</html>
